[package]
name = "palace-server"
version = "0.1.0"
authors = ["Richard McCormack <rmccormack@ebsco.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rand = { version = "0.5", features = ["i128_support"] }
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]
