[package]
name = "palace-server"
version = "0.1.0"
authors = ["Richard McCormack <rmccormack@ebsco.com>"]

[dependencies]
pretty_env_logger = "0.2"
log = "0.4"
rand = { version = "0.5", features = ["i128_support"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
ws = { git = "https://github.com/housleyjk/ws-rs" }

[dev-dependencies]
parking_lot = {version = "0.6", features = ["nightly"]}


[profile.release]
lto = true
