[package]
name = "palace_server"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]

[dependencies]
lazy_static = "1"
log = "0.4"
native-tls = "0.2"
rand = { version = "0.5", features = ["i128_support"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
ws = { git = "https://github.com/DenialAdams/ws-rs", features = ["nativetls"] }

[dev-dependencies]
parking_lot = {version = "0.6", features = ["nightly"]}
timebomb = "0.1"
