[package]
name = "palace_server"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]
edition = "2018"

[dependencies]
itertools = "0.8"
lazy_static = "1"
log = "0.4"
noisy_float = "0.1"
rand = { version = "0.6", features = ["i128_support"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
ws = { git = "https://github.com/housleyjk/ws-rs" }

[dev-dependencies]
env_logger = "0.6"
parking_lot = {version = "0.6", features = ["nightly"]}
timebomb = "0.1"
